# vigia

./: main.py  mkdocs.yml  pyproject.toml
dados/: assetfinder.txt  nmap.xml  rdap.json  rdapip.json  subfinder.json  sublist3r.txt
docs/: index.md
vigia/: assetfinder.py  nmap.py  rdap.py  subfinder.py  sublist3r.py
