[tool.poetry]
name = "vigia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
blue = "^0.9.1"
sublist3r = "^1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
pytest-cov = "^4.1.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.4"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
test = "pytest -s -x --cov=vigia -VV"
post_test = "coverage html"
